@@ -15,6 +15,18 @@ Descubra las novedades de las funciones de administración de Workload Factory: 
 
 
 
+== 4 de agosto de 2024
+
+
+
+=== Soporte de terraform
+
+La compatibilidad con Terraform está disponible para la puesta en marcha del sistema de archivos de Amazon FSx para NetApp ONTAP y la creación de máquinas virtuales de almacenamiento. La guía de configuración y administración ahora tiene instrucciones sobre cómo usar Terraform desde el CodeBox.
+
+link:use-codebox.html["Utilice Terraform de CodeBox"]
+
+
+
 == 7 de julio de 2024
 
 
